max by nb reps